commit add styling and some css changes 9/29/2024

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="container mt-5">
+<div>
   <app-intro></app-intro>
   <app-about-me></app-about-me>
   <app-skills></app-skills>
