--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,9 +13,9 @@
     <!-- Navbar Links -->
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#intro">Intro</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="#about-me">About Me</a>
         </li>
