commit add styling and some css changes 9/29/2024

--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -3,7 +3,7 @@
     <h2 class="text-center mb-4">Education</h2>
 
     <!-- MCA Degree -->
-    <div class="card mb-3">
+    <div class="card mb-3" data-aos="fade-right">
       <div class="card-body">
         <h5 class="card-title">
           Master of Computer Applications (MCA) – Computer Applications
@@ -15,7 +15,7 @@
     </div>
 
     <!-- BCA Degree -->
-    <div class="card mb-3">
+    <div class="card mb-3" data-aos="fade-left">
       <div class="card-body">
         <h5 class="card-title">
           Bachelor of Computer Applications (BCA) – Computer Applications
