--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -3,7 +3,7 @@
     <h2 class="text-center mb-4">Experience</h2>
 
     <!-- Senior Software Engineer -->
-    <div class="experience-item">
+    <div class="experience-item" data-aos="fade-up">
       <h4>Senior Software Engineer</h4>
       <p class="company">Walking Tree Technologies | April 2024 - Present</p>
       <ul class="list-unstyled">
@@ -35,7 +35,7 @@
     </div>
 
     <!-- Software Engineer -->
-    <div class="experience-item mt-4">
+    <div class="experience-item mt-4" data-aos="fade-up">
       <h4>Software Engineer</h4>
       <p class="company">Walking Tree Technologies | April 2023 - April 2024</p>
       <ul class="list-unstyled">
@@ -62,7 +62,7 @@
     </div>
 
     <!-- Associate Software Engineer -->
-    <div class="experience-item mt-4">
+    <div class="experience-item mt-4" data-aos="fade-up">
       <h4>Associate Software Engineer</h4>
       <p class="company">
         Walking Tree Technologies | January 2022 - April 2023
