--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -3,7 +3,7 @@
     <h2 class="text-center mb-4">Key Projects</h2>
 
     <!-- FRACPRO OPS Project -->
-    <div class="card mb-4">
+    <div class="card mb-4" data-aos="fade-up">
       <div class="card-header bg-primary text-white">
         <h4 class="mb-0">FRACPRO OPS</h4>
       </div>
@@ -42,7 +42,7 @@
     </div>
 
     <!-- RISHI VALLEY Project -->
-    <div class="card mb-4">
+    <div class="card mb-4" data-aos="fade-up">
       <div class="card-header bg-primary text-white">
         <h4 class="mb-0">RISHI VALLEY</h4>
       </div>
