--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -1,9 +1,9 @@
-<section id="intro" class="text-center" style="position: relative; height: 60vh; background: url('/assets/img/bg-masthead.jpg') center center/cover no-repeat;">
+<section id="intro" class="text-center" style="position: relative; height: 60vh; background: url('/assets/img/bg-masthead.jpg') center center/cover no-repeat;" data-aos="fade-in">
   <!-- Dark Overlay -->
-  <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.6);"></div>
+  <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.6);" data-aos="fade-in" data-aos-duration="800"></div>
   
   <!-- Content Section -->
-  <div class="row align-items-center justify-content-center" style="width: 100%;height: 100%; position: relative; z-index: 1;">
+  <div class="row align-items-center justify-content-center" style="width: 100%; height: 100%; position: relative; z-index: 1;">
     <div class="col-md-10" data-aos="fade-right" data-aos-duration="800">
       <h1 class="display-4 text-white mb-4">Hello, I'm <strong>Mohd Kamran</strong></h1>
       <p class="lead text-white">I'm a passionate Angular Developer</p>
