commit add styling and some css changes 9/29/2024

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <div class="container-fluid">
-    <!-- Navbar Brand -->
-    <a class="navbar-brand" href="#">
+    <!-- Navbar Brand with AOS -->
+    <a class="navbar-brand" href="#" data-aos="fade-in" data-aos-duration="1000">
       <img src="/assets/img/logo.jpg" alt="Logo" class="logo">
     </a>
 
@@ -13,26 +13,23 @@
     <!-- Navbar Links -->
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="#intro">Intro</a>
-        </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="#about-me">About Me</a>
+          <a class="nav-link" href="#about-me" data-aos="fade-left" data-aos-duration="1000">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#skills">Skills</a>
+          <a class="nav-link" href="#skills" data-aos="fade-left" data-aos-duration="1000">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#experience">Experience</a>
+          <a class="nav-link" href="#experience" data-aos="fade-left" data-aos-duration="1000">Experience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#projects">Projects</a>
+          <a class="nav-link" href="#projects" data-aos="fade-left" data-aos-duration="1000">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#education">Education</a>
+          <a class="nav-link" href="#education" data-aos="fade-left" data-aos-duration="1000">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
+          <a class="nav-link" href="#contact" data-aos="fade-left" data-aos-duration="1000">Contact</a>
         </li>
       </ul>
     </div>
