--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -5,9 +5,10 @@
   <!-- Content Section -->
   <div class="row align-items-center justify-content-center" style="width: 100%; height: 100%; position: relative; z-index: 1;">
     <div class="col-md-10" data-aos="fade-right" data-aos-duration="800">
-      <h1 class="display-4 text-white mb-4">Hello, I'm <strong>Mohd Kamran</strong></h1>
-      <p class="lead text-white">I'm a passionate Angular Developer</p>
-      <a href="#projects" class="btn btn-primary btn-lg mt-3">View My Work</a>
+      <h1 class="display-4 text-white mb-4">Greetings! I’m <strong>Kamran</strong></h1>
+      <p class="lead text-white">A tech aficionado with a passion for building scalable web applications that make an impact.</p>
+      <p><span class="typed lead text-white" data-typed-items="Designer, Developer, Guitarist, Musician"></span></p>
+      <a href="#projects" class="btn btn-primary btn-lg mt-3">Discover My Work</a>      
     </div>
   </div>
 </section>
