Add company-logo and institute-logo

--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -4,25 +4,31 @@
 
     <!-- MCA Degree -->
     <div class="card mb-3" data-aos="fade-right">
-      <div class="card-body">
-        <h5 class="card-title">
-          Master of Computer Applications (MCA) – Computer Applications
-        </h5>
-        <p class="card-text">Dr. Bhimrao Ambedkar University, Agra</p>
-        <p class="card-text"><strong>Graduation Date:</strong> August 2022</p>
-        <p class="card-text"><strong>GPA:</strong> 64.50</p>
+      <div class="d-flex align-items-center">
+        <img src="/assets/img/dbrau-logo.jpg" alt="DBRAU Logo" class="me-3 mx-3 institute-logo">
+        <div class="card-body">
+          <h5 class="card-title">
+            Master of Computer Applications (MCA) – Computer Applications
+          </h5>
+          <p class="card-text">Dr. Bhimrao Ambedkar University, Agra</p>
+          <p class="card-text"><strong>Graduation Date:</strong> August 2022</p>
+          <p class="card-text"><strong>GPA:</strong> 64.50</p>
+        </div>
       </div>
     </div>
 
     <!-- BCA Degree -->
     <div class="card mb-3" data-aos="fade-left">
-      <div class="card-body">
-        <h5 class="card-title">
-          Bachelor of Computer Applications (BCA) – Computer Applications
-        </h5>
-        <p class="card-text">Dr. Bhimrao Ambedkar University, Agra</p>
-        <p class="card-text"><strong>Graduation Date:</strong> June 2020</p>
-        <p class="card-text"><strong>GPA:</strong> 64.91</p>
+      <div class="d-flex align-items-center">
+        <img src="/assets/img/dbrau-logo.jpg" alt="DBRAU Logo" class="me-3 mx-3 institute-logo">
+        <div class="card-body">
+          <h5 class="card-title">
+            Bachelor of Computer Applications (BCA) – Computer Applications
+          </h5>
+          <p class="card-text">Dr. Bhimrao Ambedkar University, Agra</p>
+          <p class="card-text"><strong>Graduation Date:</strong> June 2020</p>
+          <p class="card-text"><strong>GPA:</strong> 64.91</p>
+        </div>
       </div>
     </div>
   </div>
