--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -3,9 +3,12 @@
     <h2 class="text-center mb-4">Experience</h2>
 
     <!-- Senior Software Engineer -->
-    <div class="experience-item" data-aos="fade-up">
+    <div class="experience-item mb-4" data-aos="fade-up">
       <h4>Senior Software Engineer</h4>
-      <p class="company">Walking Tree Technologies | April 2024 - Present</p>
+      <div class="d-flex align-items-center mb-2">
+        <img src="/assets/img/wtt-logo.jpg" alt="Walking Tree Technologies Logo" class="me-2" style="width: 50px; height: auto;">
+        <p class="company mb-0">Walking Tree Technologies | April 2024 - Present</p>
+      </div>
       <ul class="list-unstyled">
         <li>
           Led the front-end development in implementing new features across 3+
@@ -35,9 +38,12 @@
     </div>
 
     <!-- Software Engineer -->
-    <div class="experience-item mt-4" data-aos="fade-up">
+    <div class="experience-item mb-4" data-aos="fade-up">
       <h4>Software Engineer</h4>
-      <p class="company">Walking Tree Technologies | April 2023 - April 2024</p>
+      <div class="d-flex align-items-center mb-2">
+        <img src="/assets/img/wtt-logo.jpg" alt="Walking Tree Technologies Logo" class="me-2" style="width: 50px; height: auto;">
+        <p class="company mb-0">Walking Tree Technologies | April 2023 - April 2024</p>
+      </div>
       <ul class="list-unstyled">
         <li>
           Played a key role in implementing 5+ new features in existing web
@@ -62,11 +68,12 @@
     </div>
 
     <!-- Associate Software Engineer -->
-    <div class="experience-item mt-4" data-aos="fade-up">
+    <div class="experience-item mb-4" data-aos="fade-up">
       <h4>Associate Software Engineer</h4>
-      <p class="company">
-        Walking Tree Technologies | January 2022 - April 2023
-      </p>
+      <div class="d-flex align-items-center mb-2">
+        <img src="/assets/img/wtt-logo.jpg" alt="Walking Tree Technologies Logo" class="me-2" style="width: 50px; height: auto;">
+        <p class="company mb-0">Walking Tree Technologies | January 2022 - April 2023</p>
+      </div>
       <ul class="list-unstyled">
         <li>
           Resolved 100+ production support incidents quickly, consistently
