--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -12,7 +12,7 @@
           </h5>
           <p class="card-text">Dr. Bhimrao Ambedkar University, Agra</p>
           <p class="card-text"><strong>Graduation Date:</strong> August 2022</p>
-          <p class="card-text"><strong>GPA:</strong> 64.50</p>
+          <!-- <p class="card-text"><strong>GPA:</strong> 64.50</p> -->
         </div>
       </div>
     </div>
@@ -27,7 +27,7 @@
           </h5>
           <p class="card-text">Dr. Bhimrao Ambedkar University, Agra</p>
           <p class="card-text"><strong>Graduation Date:</strong> June 2020</p>
-          <p class="card-text"><strong>GPA:</strong> 64.91</p>
+          <!-- <p class="card-text"><strong>GPA:</strong> 64.91</p> -->
         </div>
       </div>
     </div>
