--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -4,3 +4,7 @@
   border-radius: 50%; /* Makes the image circular */
   object-fit: cover; /* Ensures the logo fits well within the circle */
 }
+
+.navbar {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
