Update Experience section

--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -4,11 +4,22 @@
 
     <!-- Senior Software Engineer -->
     <div class="experience-item mb-4" data-aos="fade-up">
-      <h4>Senior Software Engineer</h4>
       <div class="d-flex align-items-center mb-2">
-        <img src="/assets/img/wtt-logo.jpg" alt="Walking Tree Technologies Logo" class="me-2" style="width: 50px; height: auto;">
-        <p class="company mb-0">Walking Tree Technologies | April 2024 - Present</p>
+        <img
+          src="/assets/img/wtt-logo.jpg"
+          alt="Walking Tree Technologies Logo"
+          class="me-3"
+          style="width: 50px; height: 50px; border-radius: 50%"
+        />
+        <h4 class="mb-0">Walking Tree Technologies</h4>
       </div>
+      <p class="company mb-0">
+        Senior Software Engineer | April 2024 - Present
+      </p>
+      <p class="company mb-0">Software Engineer | April 2023 - April 2024</p>
+      <p class="company mb-0">
+        Associate Software Engineer | January 2022 - April 2023
+      </p>
       <ul class="list-unstyled">
         <li>
           Led the front-end development in implementing new features across 3+
@@ -34,17 +45,6 @@
           Wrote well-designed, testable code, contributing to the successful
           deployment of 10+ features with zero post-launch defects.
         </li>
-      </ul>
-    </div>
-
-    <!-- Software Engineer -->
-    <div class="experience-item mb-4" data-aos="fade-up">
-      <h4>Software Engineer</h4>
-      <div class="d-flex align-items-center mb-2">
-        <img src="/assets/img/wtt-logo.jpg" alt="Walking Tree Technologies Logo" class="me-2" style="width: 50px; height: auto;">
-        <p class="company mb-0">Walking Tree Technologies | April 2023 - April 2024</p>
-      </div>
-      <ul class="list-unstyled">
         <li>
           Played a key role in implementing 5+ new features in existing web
           applications, leading to an overall performance improvement of 30%.
@@ -64,17 +64,6 @@
           front-end and back-end services, which improved the data retrieval
           time by 40%.
         </li>
-      </ul>
-    </div>
-
-    <!-- Associate Software Engineer -->
-    <div class="experience-item mb-4" data-aos="fade-up">
-      <h4>Associate Software Engineer</h4>
-      <div class="d-flex align-items-center mb-2">
-        <img src="/assets/img/wtt-logo.jpg" alt="Walking Tree Technologies Logo" class="me-2" style="width: 50px; height: auto;">
-        <p class="company mb-0">Walking Tree Technologies | January 2022 - April 2023</p>
-      </div>
-      <ul class="list-unstyled">
         <li>
           Resolved 100+ production support incidents quickly, consistently
           maintaining a 99% SLA compliance, and enhancing application
