Fix Some CSS changes

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,4 +1,4 @@
-<section id="projects" class="py-5">
+<section id="projects" style="padding-top: 5rem;">
   <div class="container">
     <h2 class="text-center mb-4">Key Projects</h2>
     <div class="row">
