--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div id="about-me" class="py-5">
+<div id="about-me" style="padding-top: 5rem;">
   <div class="container">
     <h2 class="text-center mb-5 section-title">About Me</h2>
     <div class="row">
