--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section id="contact" class="py-5">
+<section id="contact" style="padding-top: 5rem;">
   <div class="container">
     <h2 class="text-center mb-4">Contact Me</h2>
 
