--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,4 +1,4 @@
-<section id="education" class="py-5">
+<section id="education" style="padding-top: 5rem;">
   <div class="container">
     <h2 class="text-center mb-4">Education</h2>
 
