--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,4 +1,4 @@
-<section id="experience" class="py-5">
+<section id="experience" style="padding-top: 5rem;">
   <div class="container">
     <h2 class="text-center mb-4">Experience</h2>
 
