--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="text-center bg-light py-3">
+<footer class="text-center bg-light py-3" style="margin-top: 5rem;">
   <p>&copy; 2024 Mohd Kamran | All Rights Reserved</p>
 </footer>
