--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <div class="container-fluid">
     <!-- Navbar Brand with AOS -->
-    <a class="navbar-brand" href="#" data-aos="fade-in" data-aos-duration="1000">
+    <a class="navbar-brand" href="#intro" data-aos="fade-in" data-aos-duration="1000">
       <img src="/assets/img/logo.jpg" alt="Logo" class="logo">
     </a>
 
