--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,38 +1,22 @@
 <!-- Main Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <div class="container-fluid">
-    <!-- Navbar Brand with AOS -->
     <a class="navbar-brand" href="#intro" data-aos="fade-in" data-aos-duration="1000">
       <img src="/assets/img/logo.jpg" alt="Logo" class="logo">
     </a>
-
-    <!-- Hamburger Menu Button for Mobile (visible on smaller screens) -->
+    
     <button class="navbar-toggler d-lg-none" type="button" (click)="toggleSidebar()">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-
-    <!-- Navbar Links for desktop view (visible on larger screens) -->
     <div class="collapse navbar-collapse d-none d-lg-block" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#about-me" data-aos="fade-left" data-aos-duration="1000">About Me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#skills" data-aos="fade-left" data-aos-duration="1000">Skills</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#experience" data-aos="fade-left" data-aos-duration="1000">Experience</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#projects" data-aos="fade-left" data-aos-duration="1000">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#education" data-aos="fade-left" data-aos-duration="1000">Education</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact" data-aos="fade-left" data-aos-duration="1000">Contact</a>
-        </li>
+        <li class="nav-item"><a class="nav-link" href="#about-me" data-aos="fade-left" data-aos-duration="1000">About Me</a></li>
+        <li class="nav-item"><a class="nav-link" href="#skills" data-aos="fade-left" data-aos-duration="1000">Skills</a></li>
+        <li class="nav-item"><a class="nav-link" href="#experience" data-aos="fade-left" data-aos-duration="1000">Experience</a></li>
+        <li class="nav-item"><a class="nav-link" href="#projects" data-aos="fade-left" data-aos-duration="1000">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="#education" data-aos="fade-left" data-aos-duration="1000">Education</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact" data-aos="fade-left" data-aos-duration="1000">Contact</a></li>
       </ul>
     </div>
   </div>
@@ -40,36 +24,25 @@
 
 <!-- Sidebar for mobile and tablet view with icons -->
 <div class="sidebar" [ngClass]="{'active': isSidebarOpen}">
+  <button class="close-btn" (click)="toggleSidebar()">×</button>
   <ul class="sidebar-nav">
     <li class="nav-item">
-      <a class="nav-link" (click)="scrollToSection('about-me')">
-        <i class="fas fa-user"></i> About Me
-      </a>
+      <a class="nav-link" (click)="scrollToSection('about-me')"><i class="fas fa-user"></i> About Me</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" (click)="scrollToSection('skills')">
-        <i class="fas fa-code"></i> Skills
-      </a>
+      <a class="nav-link" (click)="scrollToSection('skills')"><i class="fas fa-code"></i> Skills</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" (click)="scrollToSection('experience')">
-        <i class="fas fa-briefcase"></i> Experience
-      </a>
+      <a class="nav-link" (click)="scrollToSection('experience')"><i class="fas fa-briefcase"></i> Experience</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" (click)="scrollToSection('projects')">
-        <i class="fas fa-tasks"></i> Projects
-      </a>
+      <a class="nav-link" (click)="scrollToSection('projects')"><i class="fas fa-tasks"></i> Projects</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" (click)="scrollToSection('education')">
-        <i class="fas fa-graduation-cap"></i> Education
-      </a>
+      <a class="nav-link" (click)="scrollToSection('education')"><i class="fas fa-graduation-cap"></i> Education</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" (click)="scrollToSection('contact')">
-        <i class="fas fa-envelope"></i> Contact
-      </a>
+      <a class="nav-link" (click)="scrollToSection('contact')"><i class="fas fa-envelope"></i> Contact</a>
     </li>
   </ul>
 </div>
